--- a/index.html
+++ b/index.html
@@ -2071,7 +2071,7 @@
       </ul>
 
       <a class="feature-split__link" href="prenota.html">
-        Scopri l'innovativo servizio di tutoraggio by toptutor.it <span aria-hidden="true">→</span>
+        Organizza da subito il tuo studio <span aria-hidden="true">→</span>
       </a>
     </div>
 
@@ -3371,4 +3371,5 @@ Lo consiglio vivamente!
 </script>
 
 </body>
+
 </html>
