--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="it">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-<link rel="icon" href="fav/favicon.ico.png" type="image/x-icon">
+ <head>
+  <meta charset="UTF-8">
 
+  <title>Ripetizioni scolastiche online con tutor qualificati | TopTutor</title>
+  <meta name="description" content="Ripetizioni scolastiche online per medie, liceo e università. Tutor qualificati, lezioni personalizzate e supporto efficace per migliorare i risultati.">
+  <link rel="canonical" href="https://www.toptutor.online/">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ripetizioni - TopTutor</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="icon" href="/fav/favicon.png" type="image/png">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Ripetizioni scolastiche online | TopTutor">
+  <meta property="og:description" content="Ripetizioni scolastiche online con tutor qualificati per medie, liceo e università.">
+  <meta property="og:url" content="https://www.toptutor.online/">
+  <meta property="og:type" content="website">
 
     <style>
       :root {
@@ -3725,4 +3734,5 @@ Lo consiglio vivamente!
 </script>
 
 </body>
+
 </html>
