--- a/universita.html
+++ b/universita.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="it">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="icon" href="fav/favicon.ico.png" type="image/x-icon">
+  <meta charset="UTF-8" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Università - TopTutor</title>
+  <title>Ripetizioni universitarie online per superare gli esami | TopTutor</title>
+  <meta name="description" content="Ripetizioni universitarie online con tutor esperti. Preparazione agli esami, supporto personalizzato e lezioni su misura per studenti universitari." />
+  <link rel="canonical" href="https://www.toptutor.online/universita.html" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Favicon: consigliato sistemare il file/estensione -->
+  <!-- Se è PNG, meglio usare type image/png -->
+  <link rel="icon" href="/fav/favicon.png" type="image/png" />
+  <!-- Se invece hai davvero un .ico, usa questa e rimuovi la riga sopra -->
+  <!-- <link rel="icon" href="/fav/favicon.ico" type="image/x-icon" /> -->
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
+
+  <!-- Open Graph (anteprima social) -->
+  <meta property="og:title" content="Ripetizioni universitarie online | TopTutor" />
+  <meta property="og:description" content="Preparazione esami con tutor esperti: lezioni online su misura per studenti universitari." />
+  <meta property="og:url" content="https://www.toptutor.online/universita.html" />
+  <meta property="og:type" content="website" />
 
     <style>
       :root {
@@ -2404,4 +2421,5 @@ Lo consiglio vivamente!
     </script>
   </body>
 </html>
+
 
