--- a/prenota.html
+++ b/prenota.html
@@ -3,16 +3,28 @@
 <head>
   <meta charset="UTF-8" />
 
+  <title>Prenota una lezione di ripetizioni online | TopTutor</title>
+  <meta name="description" content="Prenota una lezione di ripetizioni online con tutor qualificati. Scegli materia, giorno e orario e inizia subito a migliorare i tuoi risultati." />
+  <link rel="canonical" href="https://www.toptutor.online/prenota.html" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Prenota - TopTutor</title>
+  <meta name="robots" content="index, follow" />
 
-  <!-- Font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <!-- Favicon (consigliato correggere estensione) -->
+  <link rel="icon" href="/fav/favicon.png" type="image/png" />
+  <!-- In alternativa, se usi un vero .ico -->
+  <!-- <link rel="icon" href="/fav/favicon.ico" type="image/x-icon" /> -->
 
-  <!-- Favicon -->
-  <link rel="icon" href="fav/favicon.ico.png" type="image/x-icon">
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Prenota una lezione online | TopTutor" />
+  <meta property="og:description" content="Scegli il tutor, la materia e l’orario. Prenota subito la tua lezione di ripetizioni online." />
+  <meta property="og:url" content="https://www.toptutor.online/prenota.html" />
+  <meta property="og:type" content="website" />
 
   <style>
     :root {
@@ -385,3 +397,4 @@
 
 </body>
 </html>
+
